<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.NovoItemActivity">

    <ImageView
        android:id="@+id/detalhe_item_imagem"
        android:layout_width="192dp"
        android:layout_height="256dp"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/visualizacao_foto"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@android:drawable/ic_menu_camera" />

    <Button
        android:id="@+id/botao_tirar_foto"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/botao_arredondado"
        android:contentDescription="@string/tirar_foto"
        android:text="@string/tirar_foto"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        app:layout_constraintEnd_toStartOf="@+id/botao_abrir_galeria"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/detalhe_item_imagem" />

    <TextView
        android:id="@+id/novo_item_label_titulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:text="@string/titulo_label"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/botao_tirar_foto" />

    <EditText
        android:id="@+id/detalhe_item_titulo"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:layout_marginEnd="8dp"
        android:ems="10"
        android:hint="@string/nome_da_personagem"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="@+id/novo_item_label_titulo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.50"
        app:layout_constraintStart_toEndOf="@+id/novo_item_label_titulo"
        app:layout_constraintTop_toTopOf="@+id/novo_item_label_titulo"
        app:layout_constraintVertical_bias="0.5" />

    <EditText
        android:id="@+id/novo_item_descricao"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/descricao_do_item"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="@+id/detalhe_item_titulo"
        app:layout_constraintStart_toStartOf="@+id/detalhe_item_titulo"
        app:layout_constraintTop_toBottomOf="@+id/detalhe_item_titulo" />

    <TextView
        android:id="@+id/novo_item_label_descricao"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/descricao_label"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/novo_item_descricao"
        app:layout_constraintStart_toStartOf="@+id/novo_item_label_titulo"
        app:layout_constraintTop_toTopOf="@+id/novo_item_descricao" />

    <EditText
        android:id="@+id/novo_item_universo"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/universo_da_personagem"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="@+id/novo_item_descricao"
        app:layout_constraintStart_toStartOf="@+id/novo_item_descricao"
        app:layout_constraintTop_toBottomOf="@+id/novo_item_descricao" />

    <TextView
        android:id="@+id/novo_item_label_universo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/universo_label"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/novo_item_universo"
        app:layout_constraintStart_toStartOf="@+id/novo_item_label_descricao"
        app:layout_constraintTop_toTopOf="@+id/novo_item_universo" />

    <EditText
        android:id="@+id/novo_item_data"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/dd_mm_aaaa"
        android:importantForAutofill="no"
        android:inputType="date"
        android:maxLength="10"
        android:textAlignment="center"
        app:layout_constraintStart_toStartOf="@+id/novo_item_universo"
        app:layout_constraintTop_toBottomOf="@+id/novo_item_universo" />

    <TextView
        android:id="@+id/novo_item_label_data"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/data_compra_label"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/novo_item_data"
        app:layout_constraintEnd_toStartOf="@+id/novo_item_data"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/novo_item_label_universo"
        app:layout_constraintTop_toTopOf="@+id/novo_item_data" />

    <EditText
        android:id="@+id/novo_item_valor"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/valor_do_item"
        android:importantForAutofill="no"
        android:inputType="numberDecimal"
        android:textAlignment="center"
        app:layout_constraintStart_toStartOf="@+id/novo_item_data"
        app:layout_constraintTop_toBottomOf="@+id/novo_item_data" />

    <TextView
        android:id="@+id/novo_item_label_valor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/valor_label"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/novo_item_valor"
        app:layout_constraintStart_toStartOf="@+id/novo_item_label_data"
        app:layout_constraintTop_toBottomOf="@+id/novo_item_data" />

    <TextView
        android:id="@+id/novo_item_label_real"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/real_label"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/novo_item_label_valor"
        app:layout_constraintEnd_toStartOf="@+id/novo_item_valor" />

    <Button
        android:id="@+id/botao_salvar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/botao_arredondado"
        android:contentDescription="@string/salvar_item"
        android:text="@string/salvar_item"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/botao_abrir_galeria"
        app:layout_constraintStart_toStartOf="@+id/botao_tirar_foto"
        app:layout_constraintTop_toBottomOf="@+id/novo_item_valor" />

    <Button
        android:id="@+id/botao_abrir_galeria"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/botao_arredondado"
        android:text="@string/abrir_galeria"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/botao_tirar_foto"
        app:layout_constraintTop_toBottomOf="@+id/detalhe_item_imagem" />

</androidx.constraintlayout.widget.ConstraintLayout>