<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.LoginActivity">

    <TextView
        android:id="@+id/login_email_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/e_mail"
        android:textAlignment="center"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/login_email"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:ems="10"
        android:hint="@string/nome_dominio_com"
        android:importantForAutofill="no"
        android:inputType="textEmailAddress"
        android:text="edvardo@uol.com.br"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_email_label" />

    <TextView
        android:id="@+id/login_senha_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/senha"
        android:textAlignment="center"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/login_email"
        app:layout_constraintStart_toStartOf="@+id/login_email"
        app:layout_constraintTop_toBottomOf="@+id/login_email" />

    <EditText
        android:id="@+id/login_senha"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/senha_minima"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:text="abc123"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="@+id/login_email"
        app:layout_constraintStart_toStartOf="@+id/login_email"
        app:layout_constraintTop_toBottomOf="@+id/login_senha_label" />

    <Button
        android:id="@+id/login_botao_login"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/botao_arredondado"
        android:text="@string/entrar_na_conta"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/login_senha"
        app:layout_constraintStart_toStartOf="@+id/login_senha"
        app:layout_constraintTop_toBottomOf="@+id/login_nome" />

    <Button
        android:id="@+id/login_botao_criar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/botao_arredondado"
        android:text="@string/criar_nova_conta"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/login_botao_login"
        app:layout_constraintStart_toStartOf="@+id/login_botao_login"
        app:layout_constraintTop_toBottomOf="@+id/login_botao_login" />

    <Button
        android:id="@+id/login_botao_esqueci_senha"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/botao_arredondado"
        android:text="@string/esqueci_a_senha"
        android:textAlignment="center"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/login_botao_criar"
        app:layout_constraintStart_toStartOf="@+id/login_botao_criar"
        app:layout_constraintTop_toBottomOf="@+id/login_botao_criar" />

    <TextView
        android:id="@+id/login_nome_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/nome"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/login_senha"
        app:layout_constraintStart_toStartOf="@+id/login_senha"
        app:layout_constraintTop_toBottomOf="@+id/login_senha" />

    <EditText
        android:id="@+id/login_nome"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/nome_do_usuario"
        android:inputType="textCapWords"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="@+id/login_senha"
        app:layout_constraintStart_toStartOf="@+id/login_senha"
        app:layout_constraintTop_toBottomOf="@+id/login_nome_label"
        android:importantForAutofill="no" />
</androidx.constraintlayout.widget.ConstraintLayout>