<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.cardview.widget.CardView
        android:id="@+id/item_colecao_cardview"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        app:cardCornerRadius="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/item_colecao_imagem"
                android:layout_width="120dp"
                android:layout_height="160dp"
                android:contentDescription="@string/foto_da_personagem"
                android:scaleType="fitCenter"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:src="@sample/itens.json/itens/imagem" />

            <TextView
                android:id="@+id/item_colecao_titulo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:contentDescription="@string/nome_da_personagem"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.05"
                app:layout_constraintStart_toEndOf="@+id/item_colecao_imagem"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="@sample/itens.json/itens/titulo" />

            <TextView
                android:id="@+id/item_colecao_label_descricao"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:contentDescription="@string/descricao_do_item"
                android:text="@string/descricao_label"
                app:layout_constraintStart_toStartOf="@+id/item_colecao_titulo"
                app:layout_constraintTop_toBottomOf="@+id/item_colecao_titulo" />

            <TextView
                android:id="@+id/item_colecao_label_universo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:contentDescription="@string/universo_da_personagem"
                android:text="@string/universo_label"
                app:layout_constraintStart_toStartOf="@+id/item_colecao_label_descricao"
                app:layout_constraintTop_toBottomOf="@+id/item_colecao_label_descricao" />

            <TextView
                android:id="@+id/item_colecao_label_data"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:contentDescription="@string/data_compra_label"
                android:text="@string/data_compra_label"
                app:layout_constraintStart_toStartOf="@+id/item_colecao_label_universo"
                app:layout_constraintTop_toBottomOf="@+id/item_colecao_label_universo" />

            <TextView
                android:id="@+id/item_colecao_label_valor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:contentDescription="@string/valor_do_item"
                android:text="@string/valor_label"
                app:layout_constraintStart_toStartOf="@+id/item_colecao_label_data"
                app:layout_constraintTop_toBottomOf="@+id/item_colecao_label_data" />

            <TextView
                android:id="@+id/item_colecao_data"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/item_colecao_label_data"
                app:layout_constraintTop_toBottomOf="@+id/item_colecao_universo"
                tools:text="@sample/itens.json/itens/data" />

            <TextView
                android:id="@+id/item_colecao_universo"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                app:layout_constraintEnd_toEndOf="@+id/item_colecao_data"
                app:layout_constraintStart_toStartOf="@+id/item_colecao_data"
                app:layout_constraintTop_toBottomOf="@+id/item_colecao_descricao"
                tools:text="@sample/itens.json/itens/universo" />

            <TextView
                android:id="@+id/item_colecao_descricao"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="@+id/item_colecao_label_descricao"
                app:layout_constraintEnd_toEndOf="@+id/item_colecao_universo"
                app:layout_constraintStart_toStartOf="@+id/item_colecao_universo"
                app:layout_constraintTop_toTopOf="@+id/item_colecao_label_descricao"
                tools:text="@sample/itens.json/itens/descricao" />

            <TextView
                android:id="@+id/item_colecao_valor"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                app:layout_constraintEnd_toEndOf="@+id/item_colecao_data"
                app:layout_constraintStart_toStartOf="@+id/item_colecao_data"
                app:layout_constraintTop_toBottomOf="@+id/item_colecao_data"
                tools:text="@sample/itens.json/itens/valor" />


        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>